--- a/DashBoard.html
+++ b/DashBoard.html
@@ -82,6 +82,16 @@
 
             </td>
         </tr>
+        <tr>
+            <td>
+                <div class="button-container">
+                    <a href="./Recycle.html" class="button">Recycle > </a> Help BookShare grow by contributing
+                </div>
+            </td>
+            <td>
+
+            </td>
+        </tr>
    
 </div>
 
